--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=springbootfirst
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ems
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url = jdbc:mysql://localhost:3306/ems
+spring.datasource.username = root
+spring.datasource.password =Sris#7sql
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.security.user.name=sri
+spring.security.user.password=sri@2006
+spring.security.user.roles=ADMIN,USER
